--- a/src/css/mainSection.scss
+++ b/src/css/mainSection.scss
@@ -5,6 +5,6 @@
   color: $textColor;
   text-align: center;
   height: 100vh;
+  overflow-y: auto !important;
   padding-top: 60px;
-  overflow: auto;
 }
